# cosyvoice3.rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.py  inference_test.py
python/: README.md
python/cosyvoice3/: __init__.py  __init__.pyi
scripts/: convert_weights.py
src/: audio.rs  config.rs  device.rs  error.rs  lib.rs  model.rs  normalizer.rs
