[package]
name = "cosyvoice3-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for CosyVoice3 TTS using Candle"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpenserCai/candle"
keywords = ["tts", "speech-synthesis", "cosyvoice", "candle", "pyo3"]
categories = ["multimedia::audio", "science::ml"]

[lib]
name = "cosyvoice3"
crate-type = ["cdylib"]

[dependencies]
# Candle from specific commit on cosyvoice_support branch
candle-core = { git = "https://github.com/SpenserCai/candle", rev = "6058747", features = ["default"] }
candle-nn = { git = "https://github.com/SpenserCai/candle", rev = "6058747" }
candle-transformers = { git = "https://github.com/SpenserCai/candle", rev = "6058747" }
candle-onnx = { git = "https://github.com/SpenserCai/candle", rev = "6058747", optional = true }

# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
# pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tokenizer
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Error handling
thiserror = "2.0"

# Optional accelerators
accelerate-src = { version = "0.3", optional = true }
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"], optional = true }

[build-dependencies]
pyo3-build-config = "0.23"
# pyo3-build-config = "0.27"

[features]
default = ["onnx"]
onnx = ["dep:candle-onnx"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
