[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cosyvoice3"
version = "0.1.0"
description = "Python bindings for CosyVoice3 TTS using Candle"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["tts", "speech-synthesis", "cosyvoice", "candle", "deep-learning"]

[project.urls]
Homepage = "https://github.com/SpenserCai/candle"
Repository = "https://github.com/SpenserCai/candle"

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module", "onnx"]
python-source = "python"
module-name = "cosyvoice3.cosyvoice3"
strip = true
